--- a/recipe-project/css/style.css
+++ b/recipe-project/css/style.css
@@ -85,12 +85,18 @@ div.recipe-card {
   /* background-color: ; */
   padding: 1rem;
   overflow: hidden;
+  border-radius: 5px;
+  transition: transform 0.5s;
 }
 
-.recipe-card img {
+div.recipe-card img {
   width: 100%;
   height: 300px;
-  border-radius: 5px;
+}
+
+div.recipe-card:hover {
+  transform: scale(1.1);
+  background-color: rgb(210, 209, 209);
 }
 
 footer {
@@ -101,4 +107,33 @@ footer a,
 footer a::after {
   text-decoration: none;
   color: black;
+}
+
+@media only screen and (max-width: 600px) {
+  div.recipe-card:hover {
+    transform: scale(1.05);
+  }
+  form {
+    width: 100%;
+    max-width: 350px;
+    margin: 20px auto;
+    /* background-color: ; */
+    display: flex;
+  }
+  form input {
+    /* width: 100%; */
+    background-color: transparent;
+    padding: 10px;
+    border-radius: 5px;
+    /* border: none; */
+    /* outline: none; */
+    font-size: 1.25rem;
+    /* display: inline-block; */
+  }
+
+  form button {
+    /* width: auto; */
+    /* padding: 5px; */
+    font-size: 1.25rem;
+  }
 }
