--- a/recipe-project/css/style.css
+++ b/recipe-project/css/style.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 
+:root {
+  --color1: #ffeb9a;
+  --color2: #fffae7;
+  --color3: #b2dcf7;
+  --color4: #eaf5f5;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -15,8 +22,9 @@ img {
 
 html {
   font-family: "Source Sans Pro", sans-serif;
-  font-size: 12px;
+  font-size: 16px;
   font-weight: 600;
+  background-color: var(--color4);
 }
 
 main {
@@ -54,6 +62,7 @@ form {
   max-width: 400px;
   margin: 20px auto;
   /* background-color: ; */
+  display: flex;
 }
 form input {
   width: 80%;
@@ -61,14 +70,14 @@ form input {
   padding: 10px;
   border-radius: 5px;
   /* border: none; */
-  /* outline: none; */
+  outline: none;
   font-size: 1.25rem;
   display: inline-block;
 }
 
 form button {
   width: auto;
-  padding: 8px;
+  padding: 5px;
   font-size: 1.25rem;
 }
 
@@ -79,6 +88,7 @@ div#results {
   grid-gap: 25px;
   grid-template: auto / repeat(auto-fit, minmax(300px, 1fr));
 }
+
 div.recipe-card {
   width: 100%;
   /* border-radius: ; */
@@ -96,7 +106,32 @@ div.recipe-card img {
 
 div.recipe-card:hover {
   transform: scale(1.1);
-  background-color: rgb(210, 209, 209);
+  background-color: var(--color2);
+}
+
+div.recipe-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.5rem;
+}
+
+div a.recipe-button {
+  text-decoration: none;
+  text-align: center;
+  width: auto;
+  padding: 8px;
+  font-size: 1.1rem;
+  color: black;
+  background-color: var(--color1);
+  border: solid 1px rgb(49, 49, 49);
+  border-radius: 5px;
+}
+
+div p.recipe-info {
+  display: block;
+  margin-bottom: 10px;
+  line-height: 1.5rem;
 }
 
 footer {
@@ -104,9 +139,11 @@ footer {
 }
 
 footer a,
-footer a::after {
+footer a::after,
+footer a:hover {
   text-decoration: none;
   color: black;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 600px) {
