--- a/recipe-project/css/style.css
+++ b/recipe-project/css/style.css
@@ -44,11 +44,6 @@ div.container {
   margin: 0 auto;
 }
 
-div.main-head {
-  display: grid;
-  grid-template-columns: 100% 5%;
-}
-
 h1.main-heading {
   text-align: center;
   font-size: 3rem;
@@ -61,6 +56,7 @@ span.home-icon {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 .favorite-icon a,
@@ -219,6 +215,6 @@ footer a:hover {
   form button {
     /* width: auto; */
     /* padding: 5px; */
-    font-size: 1.25rem;
+    font-size: 1rem;
   }
 }
