--- a/recipe-project/css/style.css
+++ b/recipe-project/css/style.css
@@ -84,6 +84,7 @@ form {
   margin: 20px auto;
   /* background-color: ; */
   display: flex;
+  flex-wrap: wrap;
 }
 form input {
   width: 80%;
@@ -100,6 +101,15 @@ form button {
   width: auto;
   padding: 5px;
   font-size: 1.25rem;
+}
+
+select#dietFilter,
+select#healthFilter {
+  background-color: var(--color4);
+  padding: 5px;
+  font-size: 1.1rem;
+  border-radius: 5px;
+  margin-top: 5px;
 }
 
 div#results {
@@ -228,5 +238,6 @@ footer a:hover {
     /* width: auto; */
     /* padding: 5px; */
     font-size: 1rem;
+    width: auto;
   }
 }
